@@ -17,6 +17,7 @@ PSP_BEGIN_EXPORTS
 		PSP_EXPORT_FUNC(PSPRadioExport_GetMyIP)
 		PSP_EXPORT_FUNC(PSPRadioExport_RequestExclusiveAccess)
 		PSP_EXPORT_FUNC(PSPRadioExport_GiveUpExclusiveAccess)
+		PSP_EXPORT_FUNC(PSPRadioExport_GetVersion)
 		PSP_EXPORT_FUNC(sceRtcGetCurrentClockLocalTime)
 	PSP_EXPORT_END
 
