@@ -1,18 +1,18 @@
 # Define the exports for the prx
 PSP_BEGIN_EXPORTS
 
-# These four lines are mandatory (although you can add other functions like module_stop)
-# syslib is a psynonym for the single mandatory export.
-PSP_EXPORT_START(syslib, 0, 0x8000)
-PSP_EXPORT_FUNC(module_start)
-PSP_EXPORT_VAR(module_info)
-PSP_EXPORT_FUNC(module_stop)
-PSP_EXPORT_END
-
-# Export our function
-PSP_EXPORT_START(PSPRadio_UI, 0, 0x0001)
-PSP_EXPORT_FUNC_HASH(getModuleInfo)
-PSP_EXPORT_FUNC_HASH(ModuleStartUI)
-PSP_EXPORT_END
+	# These four lines are mandatory (although you can add other functions like module_stop)
+	# syslib is a psynonym for the single mandatory export.
+	PSP_EXPORT_START(syslib, 0, 0x8000)
+		PSP_EXPORT_FUNC(module_start)
+		PSP_EXPORT_VAR(module_info)
+		PSP_EXPORT_FUNC(module_stop)
+	PSP_EXPORT_END
+	
+	# Export our function
+	PSP_EXPORT_START(PSPRadio_UI, 0, 0x0001)
+		PSP_EXPORT_FUNC_HASH(getModuleInfo)
+		PSP_EXPORT_FUNC_HASH(ModuleStartUI)
+	PSP_EXPORT_END
 
 PSP_END_EXPORTS
